# mail-migration

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml
src/lib/: __init__.py  emlx.py
src/mail_migration/: __init__.py  cli.py  migrate.py
src/mail_migration/readers/: __init__.py  apple_mbox.py  apple_mbox_scan.py  mail_store.py  mail_store_scan.py
src/mail_migration/writers/: __init__.py  thunderbird_local.py
tests/unit/: test_apple_mbox.py  test_cli.py  test_emlx.py  test_mail_store.py  test_mail_store_scan.py  test_migrate.py  test_writers.py
